# ymb7fb_DS5111su24_lab_01

./: .gitignore  LICENSE  Makefile  Makefile.txt  README.md  makefile_old  pyproject.toml  requirements.txt  test_text_processing.py  text_processing.py
.github/workflows/: python-lint.yml  validations.yml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: setup.py
src/ymb7fb/: __init__.py  text_processing.py
src/ymb7fb_DS5111su24_lab_01.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_clean_text.py  test_count_words.py  test_environment.py  test_failing_with_feedback.py  test_file_functions.py  test_integration.py  test_text_processing.py  test_tokenize.py  the_raven.txt
