[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ymb7fb_DS5111su24_lab_01"
version = "0.1.0"
description = "A Python package for my DS5111 assignment"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    # List any package dependencies here
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
